--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -20,8 +20,9 @@
 // Pages
 @import "pages/dashboard";
 @import "pages/mescours";
-@import "pages/cours";
+@import "pages/coursp";
 @import "pages/modifier";
+@import "pages/cours";
 
 
 // Vendors
