--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -19,10 +19,14 @@ body {
     display: flex;
     flex-direction: column;
     flex-flow: column nowrap;
-    // justify-content: space-evenly;
     &-short {
         margin-left: 4%;
         width: 96%;
+    }
+
+    &-course {
+        margin-left: 20%;
+        width: 80%;
     }
 }
 
@@ -43,6 +47,7 @@ body {
     background-color: $color-main;
     color: $color-black;
     padding: 0 2rem;
+
 
 
     &-dark {
