--- a/src/assets/sass/layout/_sidebar.scss
+++ b/src/assets/sass/layout/_sidebar.scss
@@ -14,6 +14,19 @@
         width: 4%;
     }
 
+    &-course {
+        background-color: $color-white;
+        width: 20%;
+        top: 7vh;
+        color: $color-black;
+    }
+
+    &__contenu {
+        text-align: center;
+        width: 100%;
+        border: thin solid;
+    }
+
     
 
     &__menu {
