--- a/src/assets/sass/pages/_cours.scss
+++ b/src/assets/sass/pages/_cours.scss
@@ -1,154 +1,117 @@
 .cours {
-    font-size: 3rem;
-    height: 100%;
-    width: 100%;
-    margin: 1rem 0rem;;
 
-    h3 {
-        margin: 0rem 2rem;
-    }
-
-    &__features {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    &__btn {
-        margin-right: 5rem;
-        height: 5rem;
-        border-radius: 5px;
-        background-color: $color-primary-yellow;
-        font-size: 1.5rem;
+    &__main {
+        border-radius: 25px;
         border: 1px solid;
-        width: 15rem;
-
-        &:hover {
-            background-color: $color-sun;
-        }
-    }
-
-    &__input {
-        display: flex;
-        align-items: center;
         margin: 1rem;
+        // padding: 1rem;
+        color: $color-black;
+        background-color: $color-white;
     }
 
-    .formations {
-        display: flex;
-        flex-direction: column;
+    &__title {
+        margin: 1rem 0;
+        text-align: center;
     }
 
-    .formation {
-        height: 15rem;
+    &__maincontent {
         display: flex;
-        border: 1px solid;
+        justify-content: space-evenly;
+    }
 
-        margin: 2rem 10rem;
+    &__description {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
 
-        &__img {
-            width: 25%;
-            border-right: 1px solid;
-        }
 
-        img {
-            width: 100%;
-            max-height: 100%;
-            object-fit: cover;
-            border-right: 1px solid;
-        }
-
-        &__description {
-            width: 30rem;
+        &--left {
             padding: 1rem;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: space-between;
-            border-right: 1px solid;
-
-            h4 {
-                margin: 0
-            }
-
-            span {
-                font-size: 1.3rem;
-                margin-right: 1rem;
-            }
         }
 
-        &__actions {
-            height: 100%;
-            flex-grow: 1;
-            display: flex;
-            align-items: center;
-            justify-content: space-evenly;
-
-            button {
-                background-color: $color-primary-yellow;
-                width: 15rem;
-                height: 5rem;
-                font-size: 1.6rem;
-                border: 1px solid black;
-                border-radius: 25px;
-                &:hover {
-                    background-color: $color-sun;
-                }
-            }
-        }
-    }
-
-    &__modal {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 400;
-        background-color: $color-white;
-        border: 2px solid #000;
-        box-shadow: 24;
-        padding: 4rem;
-        border-radius: 15px;
-
-        #modal-modal-title {
-            text-align: center;
-            margin: 0;
-        }
-
-        .form {
+        &--right {
             display: flex;
             flex-direction: column;
-            font-size: 1.6rem;
-            margin-top: 2rem;
-            // justify-content: center;
+            align-items: center;
+            justify-content: center;
+            // width: 50%;
+        }
+    }
 
-            &__input {
-                display: flex;
-                align-items: center;
-                width: 100%;
-                padding: 1rem 0rem;
-
-                label {
-                    width: 40%;
-                    margin-right: 1rem;
-                }
-
-                input {
-                    width: 60%;
-                    grid-column: 2 / 3;
-                }
-            }
-
-            &__add {
-                background-color: $color-primary-yellow;
-                border: 1px solid;
-                border-radius: 15px;
-                font-size: 1.6rem;
-                margin-top: 1rem;
-                // width: 50%;
-                margin: 1rem 4rem;
-                padding: .56rem 0rem;
+    &__stats {
+        display: flex;
+        justify-content: space-evenly;
+        .stat {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-size: 1.5rem;
+            margin-right: 2rem;
+            span {
+                margin: 1rem 0;
             }
         }
     }
 
+    &__btn {
+        width: 15rem;
+        height: 5rem;
+        border-radius: 15px;
+        background-color: #3a3636;
+        color: $color-white;
+    }
+
+    &__secondary {
+        margin: 1rem;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 2rem;
+
+        h3 {
+            margin-left: 2rem;
+        }
+    }
+
+    &__objectifs {
+        border-radius: 25px;
+        border: 1px solid;
+        color: $color-black;
+        background-color: $color-white;
+        grid-column: 1 / 3;
+        .objectifs {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            padding: 1rem;
+            font-size: 1.8rem;
+            overflow-wrap: anywhere;
+        }
+    }
+
+    &__prerequis {
+        border-radius: 25px;
+        border: 1px solid;
+        color: $color-black;
+        background-color: $color-white;
+        .prerequis {
+            padding: 1rem;
+            font-size: 1.8rem;
+            overflow-wrap: anywhere;
+        }
+    }
+}
+
+.sidebar{
+
+    &__course {
+
+    }
+    &__section {
+        border: 1px solid;
+        width: 100%;
+        h4 {
+            text-align: center;
+        }
+    }
 }
