--- a/src/assets/sass/pages/_modifier.scss
+++ b/src/assets/sass/pages/_modifier.scss
@@ -7,17 +7,16 @@
     &-content {
         margin: 1rem 5rem;
         -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 4px 5px 15px 6px rgba(0,0,0,0); 
-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 4px 5px 15px 6px rgba(0,0,0,0);
+        box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 4px 5px 15px 6px rgba(0,0,0,0);
         width: 85%;
         min-height: 90vh;
-        background-color: $color-card;
+        background-color: $color-white;
         border: 1px solid;
     }
 
     &__title {
         text-align: center;
         border-bottom: 1px solid;
-        // border: 1px solid;
     }
 
     &__form {
@@ -31,21 +30,139 @@ box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 4px 5px 15p
         font-size: 1.8rem;
     }
 
+    #title {
+        width: 80%;
+    }
+    #category {
+        width: 20%;
+    }
+    #level {
+        width: 20%;
+    }
+
     &__input {
         display: flex;
         flex-direction: column;
+        // width: 80%;
 
-        width: 80%;
+        .textfield {
+
+            label {
+                color: $color-black;
+                font-family: "Josefin Sans", sans-serif;
+                font-weight: bold;
+                font-size: 2rem;
+            }
+            #standard-basic {
+                background-color: $color-white;
+                font-family: "Josefin Sans", sans-serif;
+                font-size: 1.8rem;
+            }
+        }
     }
 
     &__editor {
+        margin-top: 2rem;
         width: 80%;
-        // height: 200px;
+
+        label {
+            font-family: "Josefin Sans", sans-serif;
+            font-weight: bold;
+            font-size: 1.6rem;
+        }
+    }
+
+    &__objectifs, &__prerequis {
+        margin-top: 2rem;
+        display: flex;
+        width: 80%;
+        flex-direction: column;
+        label {
+            font-family: "Josefin Sans", sans-serif;
+            font-weight: bold;
+            font-size: 1.6rem;
+            margin-bottom: 1rem;
+        }
+
+        .item {
+            width: 80%;
+        }
+
+        .deleteitem {
+            margin-left: 2rem;
+        }
+
+        .additem {
+            width: 50%;
+            border-radius: 5px;
+        }
+    }
+
+    &__objectif, &__requis {
+        width: 80%;
+        margin-bottom: 1rem;
+        display: flex;
     }
 
     #description {
         border: 1px solid;
         background-color: $color-white;
+        .codex-editor {
+            &__redactor {
+                padding-bottom: 2rem !important;
+                margin: 0 2rem;
+            }
+        }
+
+    }
+
+    &__imagesource {
+        padding: 1rem 2rem;
+        background-color: red;
+        color: $color-white;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.6rem;
+        width: 40%;
+
+        &:hover {
+            background-color: $color-primary-yellow;
+            color: $color-black;
+        }
+
+        span {
+            margin-left: 1rem;
+        }
+    }
+
+    &__infos {
+        margin-top: 2rem;
+        display: flex;
+        justify-content: space-between;
+        width: 80%;
+    }
+
+    .select {
+        width: 100%;
+        background-color: $color-white;
+        font-size: 1.8rem;
+        &__label {
+            color: $color-black;
+            font-family: "Josefin Sans", sans-serif;
+            font-weight: bold;
+            font-size: 2rem;
+        }
+        &__input {
+            font-size: 1.8rem;
+
+        }
+
+        &__item {
+            font-size: 1.2rem;
+        }
+        
     }
 }
 
@@ -55,7 +172,9 @@ box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 4px 5px 15p
     align-items: center;
     height: 45vh;
     width: 15%;
-    background-color: $color-card;
+    background-color: $color-white;
+    -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 4px 5px 15px 6px rgba(0,0,0,0); 
+        box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 4px 5px 15px 6px rgba(0,0,0,0);
     border: 1px solid;
 
 
@@ -63,6 +182,7 @@ box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 4px 5px 15p
         display: flex;
         align-items: center;
         justify-content: center;
+        border-bottom: 1px solid;
         height: 25%;
         width: 100%;
         color: $color-black;
@@ -72,4 +192,360 @@ box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 4px 5px 15p
             background-color: lightgray;
         }
     }
+}
+
+.MuiMenuItem-root {
+    font-size: 1.6rem;
+}
+
+.MuiInput-root {
+    border: 1px solid;
+}
+
+
+.MuiInputLabel-root {
+    font-size: 1.6rem;
+    // background-color: $color-card
+}
+
+
+
+
+
+
+// Programme
+
+.programme {
+    height: 100%;
+    margin: 1rem 5rem;
+
+    &__paragraph {
+        text-align: center;
+        font-size: 1.5rem;
+    }
+
+    .insert-btn-row {
+        margin: 1rem 0rem;
+        height: 4rem;
+        opacity: 0;
+        transition: opacity 0.5s ease;
+        cursor: pointer;
+
+        &:hover {
+            opacity: 1;
+        }
+
+        button {
+            width: 10%;
+            height: 100%;
+            border: 0;
+            clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
+        }
+
+        &--session {
+            height: 2.5rem;
+        }
+    }
+}
+
+.section {
+    margin: 2rem 0rem;
+    background-color: lightblue;
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
+    &__title {
+        display: flex;
+        align-items: center;
+        &--name {
+            font-size: 1.6rem;
+            border-radius: 5px;
+            &:disabled {
+                background-color: lightblue;
+                color: $color-black;
+                // border-radius: 5px;
+            }
+        }
+    }
+
+    h4 {
+        margin: 0;
+    }
+
+    &__icon {
+        margin-left: 1rem;
+        font-size: 2rem;
+    }
+
+    span {
+        font-size: 1.6rem;
+    }
+
+    &__title {
+        margin-bottom: 2rem;
+    }
+
+    &__buttons {
+        opacity: 0;
+        transition: opacity 0.5s ease;
+
+        &:hover {
+            opacity: 1;
+        }
+    }
+
+    &__button {
+        background-color: lightblue;
+        border: 0;
+        cursor: pointer;
+    }
+}
+
+.session {
+    border: 1px solid;
+    border-radius: 10px;
+    background-color: whitesmoke;
+    margin: .5rem 4rem;
+    display: flex;
+    flex-direction: column;
+
+    &__title {
+        padding: 0rem 2rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        &--name {
+            border-radius: 5px;
+            &:disabled {
+                color: $color-black;
+            }
+        }
+        &--left {
+            display: flex;
+            align-items: center;
+        }
+
+        &--right {
+            button {
+                border: 0;
+                background-color: whitesmoke;
+                cursor: pointer;
+            }
+        }
+    }
+
+    h5 {
+        margin: 1rem 0rem;
+    }
+
+    &__buttons {
+        opacity: 0;
+        transition: opacity 0.5s ease;
+
+        &:hover {
+            opacity: 1;
+        }
+    }
+
+    &__button {
+        background-color: whitesmoke;
+        border: 0;
+        cursor: pointer;
+    }
+
+    &__content {
+        padding: 1rem;
+        border-top: 1px solid;
+    }
+
+    &__btncontenu {
+        
+    }
+}
+
+
+.addcontent {
+    background-color: whitesmoke;
+    border-top: 1px solid;
+    border-radius: 0 0 10px 10px;
+    &__container {
+        position: relative;
+    }
+
+    &__tab {
+        position: absolute;
+        right: 5rem;
+        bottom: 100%;
+        background-color: whitesmoke;
+        border-top: 1px solid;
+        border-left: 1px solid;
+        border-right: 1px solid;
+        border-radius: 5px 5px 0 0;
+        height: 3rem;
+        padding: 0rem .5rem;
+
+        &--title {
+            display: flex;
+            align-items: center;
+        }
+
+        &--close {
+            margin-left: 1rem;
+            border: 0;
+            background-color: whitesmoke;
+        }
+    }
+
+    &__tabcontent {
+        display: flex;
+        width: 100%;
+        font-size: 3rem;
+        align-items: center;
+        // padding: 2rem 0;
+        justify-content: space-evenly;
+
+        .content-type {
+            height: 6rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding: 1rem;
+            margin: 2rem 0;
+            border-radius: 10px;
+            align-items: center;
+            border: 1px solid;
+            cursor: pointer;
+
+        }
+
+    }
+
+    &__editor {
+        width: 100%;
+        height: 100%;
+        border-top: 1px solid;
+        border-radius: 0 0 10px 10px;
+        overflow: auto;
+
+        .article {
+            height: auto;
+            width: calc(100% - 2px);
+            border-radius: 0 0 5px 5px;
+            font-size: 1.2rem;
+
+            background-color: $color-white;
+            .codex-editor {
+                &__redactor {
+                    margin: 0 2rem;
+                }
+            }
+    
+        }
+    }
+
+    &__video {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
+        input {
+            width: 80%;
+            margin: 2rem 0;
+        }
+        iframe {
+            border-radius: 10px;
+            border: 1px solid;
+        }
+    }
+}
+
+.editcontent {
+    background-color: whitesmoke;
+    border-top: 1px solid;
+    border-radius: 0 0 10px 10px;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+
+    &__btn {
+        margin: .2rem 0rem;
+        width: 20%;
+        border: 1px solid;
+        span {
+            margin-left: .5rem;
+        }
+    }
+}
+
+// Tarification //
+
+.tarification {
+    height: 100%;
+    margin: 1rem 5rem;
+
+    &__paragraph {
+        text-align: center;
+        font-size: 2rem;
+    }
+
+    &__content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    &__price {
+        padding: 1rem;
+        display: flex;
+        align-items: center;
+        font-size: 1.5rem;
+        width: fit-content;
+        label {
+            font-size: 1.5rem;
+            margin-right: 1rem;
+        }
+
+        input {
+            text-align: center;
+            border-radius: 5px;
+        }
+    }
+
+    &__promotion {
+        padding: 1rem;
+        display: flex;
+        display: flex;
+        align-items: center;
+        font-size: 1.5rem;
+        width: fit-content;
+        label {
+            font-size: 1.5rem;
+            margin-right: 1rem;
+        }
+
+        input {
+            text-align: center;
+            border-radius: 5px;
+        }
+    }
+
+    &__btn {
+        margin-left: 1rem;
+        border-radius: 5px;
+        font-size: 1.6rem;
+    }
+
+    &__pricefinale {
+        padding: 2rem;
+        font-size: 1.9rem;
+    }
+}
+
+.hidden {
+    display: none !important;
 }
